deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roastandrelax
  namespace: default
  labels:
    app: roastandrelax
spec:
  replicas: 1
  selector:
    matchLabels:
      app: roastandrelax
  template:
    metadata:
      labels:
        app: roastandrelax
    spec:
      containers:
      - name: roastandrelax
        image: roastandrelax:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        startupProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 5
          failureThreshold: 50
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 120
          periodSeconds: 10
          failureThreshold: 3
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 5
          failureThreshold: 6
          timeoutSeconds: 3
